@@ -18,9 +18,10 @@ enum rrl_type {
 	rrl_type_nodata		= 0x20,
 	rrl_type_dnskey		= 0x40,
 	rrl_type_positive	= 0x80,
+	rrl_type_rrsig		= 0x100,
 
 	/* all classification types */
-	rrl_type_all		= 0xff,
+	rrl_type_all		= 0x1ff,
 	/* to distinguish between ip4 and ip6 netblocks, used in code */
 	rrl_ip6			= 0x8000
 };
