@@ -1,3 +1,6 @@
+28 November 2012: Wouter
+	- RRL implements classification type RRSIG.
+
 21 November 2012: Wouter
 	- Implement rrl log of unblock for collision.
 
